<resources>
    <string name="app_name">Restaurant</string>
    <string name="hamburgers">Hamburgers</string>
    <string name="steak">Steak</string>
    <string name="salad">Salad</string>
    <string name="drinks">Drinks</string>
    <string name="burger_img">burger img</string>
    <string name="init_total">$0.00</string>
    <string name="total">Total</string>
    <string name="clear">CLEAR</string>
    <string name="item_name">Item Name</string>
    <string name="num">Num</string>
    <string name="dollar_signs">$$</string>
    <string name="chicken_burger">Chicken Burger</string>
    <string name="_0_00">$0.00</string>
    <string name="see_cart">SEE Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>